[gd_scene load_steps=4 format=3 uid="uid://nyx5hb1sahu6"]

[ext_resource type="Texture2D" uid="uid://ehcol8w31b35" path="res://Assets/Placeholder/Case_View.png" id="1_5ai1v"]
[ext_resource type="Script" uid="uid://oh85gyyvbud4" path="res://Assets/sequencer/view_button.gd" id="1_ltc2o"]
[ext_resource type="AudioStream" uid="uid://dk0hmxp78hmrq" path="res://Assets/audio/click.mp3" id="1_ltc3s"]

[node name="Sprite2D" type="Sprite2D"]
texture = ExtResource("1_5ai1v")

[node name="view_button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -30.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_ltc2o")

[node name="click_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_ltc3s")
volume_db = 7.0

[connection signal="button_down" from="view_button" to="view_button" method="_on_button_down"]
[connection signal="button_up" from="view_button" to="view_button" method="_on_button_up"]
[connection signal="mouse_entered" from="view_button" to="view_button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="view_button" to="view_button" method="_on_mouse_exited"]
